fixed layout bug

--- a/src/Common/Forms/postForm.module.css
+++ b/src/Common/Forms/postForm.module.css
@@ -6,7 +6,7 @@
 /*    justify-content: center;*/
 /*}*/
 .item {
-    width: 100%;
+    width: 80%;
     border: 2px solid #F4F2F2;
     margin: 0 20px;
     text-align: end;
