--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -13,7 +13,7 @@
     grid-area: h;
     background: #fff url(https://img.freepik.com/free-vector/social-network-banner-template-with-smartphone-background_53876-117574.jpg?w=826&t=st=1685735070~exp=1685735670~hmac=3ce8590fb4b7f7f5732809f915f84f6b1a8a1d8b0471998006a005fca18c4cdc) no-repeat center;
     background-size: cover;
-    background-position: 20% 30%;
+    background-position: 30% 45%;
     height: 400px;
     margin-bottom: 30px;
     /*margin-top: 4%;*/
