--- a/src/Components/Main/Profile/MyPosts/MyPosts.module.css
+++ b/src/Components/Main/Profile/MyPosts/MyPosts.module.css
@@ -14,10 +14,10 @@
     padding: 25px 25px;
     background-color: #FDFDFD;
     margin-bottom: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    flex-wrap: nowrap;
+    /*display: flex;*/
+    /*flex-direction: row;*/
+    /*justify-content: flex-start;*/
+    /*flex-wrap: nowrap;*/
     width: 50%;
 }
 
